--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "antd": "^4.24.2",
+    "axios": "^1.1.3",
+    "babel-plugin-import": "^1.13.5",
     "core-js": "^3.8.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
+    "vant": "^3.6.5",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-marquee": "^3.1.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
