--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "axios": "^1.1.3",
     "babel-plugin-import": "^1.13.5",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.6",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
     "vant": "^3.6.5",
     "vue": "^3.2.13",
+    "vue-cookies": "^1.8.2",
     "vue-router": "^4.0.3",
     "vue3-marquee": "^3.1.2",
     "vuex": "^4.1.0"
